--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">linkedIn</string>
+    <string name="app_name">Social App</string>
     <string name="lorem">
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
         been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took
